syntax = "proto3";
package sedachain.pubkey.v1;

import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/sedaprotocol/seda-chain/x/pubkey/types";

// IndexPubKeyPair defines an index - public key pair.
message IndexedPubKey {
  uint32 index = 1;
  google.protobuf.Any pub_key = 2
      [ (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey" ];
}
